# Sanskrit

./: .env.example  .gitignore  CITATION.cff  DEMO_OUTPUT.md  Dockerfile  EMAIL_TEMPLATE.md  ENHANCED_DEBATE_SUMMARY.md  LICENSE  LIVE_AI_DEBATE_SUMMARY.md  PROJECT_REVIEW.md  README.md  RELEASE_NOTES.md  USER_GUIDE.md  automate_deploy.exp  automate_setup.exp  change_password.exp  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup.py  setup_proxy.exp  setup_server.sh  test-gemini.mjs  test_output.json  translation_test.json
archive/typescript-examples/: brahma-kadigina-learning.mjs  enhanced-ai-debate.mjs  roundtable-live.mjs
docs/: PUBLICATION_README_PRINT.md  README.md  VEDANTA_ROUNDTABLE_SUMMARY.md  VEDANTA_TRUTH_DEBATE.md
examples/: README.md  README_DEBATE.md  ai_philosophy_debate.py  gajendra_moksha.py  integration_test.py  live-ai-consciousness-debate.mjs  morphology_test.py  panini_test.py  samasa_test.py  semantics_test.py  shanti_demo.py  simple_test.py  vedanta_debate.py
mcp-server/: CONTRIBUTING.md  README.md  package.json  tsconfig.json
mcp-server/docs/: PUBLICATION_README.md  VERIFICATION.md
mcp-server/examples/: gajendra-moksha-learning.mjs  live-vedanta-debate.mjs  usage-example.js  vedanta-roundtable.mjs  vedanta-truth-debate.mjs
mcp-server/scripts/: README.md  run-debate.sh  run-server.sh
mcp-server/src/: index.ts
mcp-server/src/lib/: sanskrit-agent.ts  sanskrit-protocol.ts  types.ts  (+2 more)
mcp-server/tests/: validation.test.ts
ops/scripts/: deploy.sh
paper/: paper.bib  paper.md
scripts/: run-debate.sh  run-server.sh  setup.sh
src/: index.ts
src/lib/: agent-registry.ts  communication-logger.ts  index.ts  sanskrit-protocol.ts  translation-service.ts
src/sanskrit_mcp/: __init__.py  __main__.py  sse.py
verification/: test_gemini.py  test_mcp_tools.py
web/: package.json
web/data/: dictionary.json
web/tests/: HomeView.test.tsx  Sidebar.test.tsx  grammar-service.test.js
(+32 files in other folders)
